--- a/dockerfile.i386
+++ b/dockerfile.i386
@@ -2,11 +2,18 @@
 FROM debian:buster-slim@sha256:0d18b52a1624d97d82ebffffbdb2537f9a740eb79fdad630745307a83d74f84d
 
 ## install emacs and TeX and add non-free fonts
-RUN apt update && apt install -y emacs texlive-latex-extra curl && \
+RUN apt update && apt install -y emacs texlive-latex-extra texlive-xetex curl && \
   mkdir /tmp/tex && cd /tmp/tex && \
   curl -O https://tug.org/fonts/getnonfreefonts/install-getnonfreefonts && \
   texlua install-getnonfreefonts && \
   getnonfreefonts --sys -a
 
+## Add source code pro font from adobe
+RUN mkdir /tmp/adobe && cd /tmp/adobe && \
+  curl -LO https://github.com/adobe-fonts/source-code-pro/releases/download/2.032R-ro%2F1.052R-it%2F1.012R-VAR/OTF-source-code-pro-2.032R-ro-1.052R-it.zip && \
+  unzip *.zip && mkdir /usr/share/fonts/truetype/sourcecodepro/ && \
+  cp OTF/SourceCodePro-* /usr/share/fonts/truetype/sourcecodepro/ && \
+  fc-cache -f -v -r
+
 ## Add python and sqlite for demoing data analysis
-RUN apt install -y python3 sqlite3
+RUN apt install -y python3 sqlite3 python3-pygments pipenv
