--- a/dockerfile.x64
+++ b/dockerfile.x64
@@ -18,4 +18,6 @@ RUN mkdir /tmp/adobe && cd /tmp/adobe && \
 ## Add python and sqlite for demoing data analysis
 RUN apt install -y python3 sqlite3 python3-pygments pipenv
 
-RUN pip3 install pygments-style-solarized
+RUN pip3 install pygments-style-solarized && \
+  pip3 install matplotlib==3.2.2 && \
+  pip3 install tikzplotlib==0.9.2
